update image path case sensitive

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,127 +5,127 @@ description: ""
 active: gallery
 header-img: "img/gallery-bg.jpg"
 images:
- - image_path: /gallery/albums/alb01.jpg
+ - image_path: /gallery/albums/alb01.JPG
    gallery-folder: /gallery/gallery01/
    gallery-name: 1
    gallery-date: July 2015
- - image_path: /gallery/albums/alb02.jpg
+ - image_path: /gallery/albums/alb02.JPG
    gallery-folder: /gallery/gallery02/
    gallery-name: 2
    gallery-date: June 2015
- - image_path: /gallery/albums/alb03.jpg
+ - image_path: /gallery/albums/alb03.JPG
    gallery-folder: /gallery/gallery03/
    gallery-name: 3
    gallery-date: May 2015
- - image_path: /gallery/albums/alb04.jpg
+ - image_path: /gallery/albums/alb04.JPG
    gallery-folder: /gallery/gallery04/
    gallery-name: 4
    gallery-date: April 2015
- - image_path: /gallery/albums/alb05.jpg
+ - image_path: /gallery/albums/alb05.JPG
    gallery-folder: /gallery/gallery05/
    gallery-name: 5
    gallery-date: March 2015
- - image_path: /gallery/albums/alb06.jpg
+ - image_path: /gallery/albums/alb06.JPG
    gallery-folder: /gallery/gallery06/
    gallery-name: 6
    gallery-date: February 2015
- - image_path: /gallery/albums/alb07.jpg
+ - image_path: /gallery/albums/alb07.JPG
    gallery-folder: /gallery/gallery07/
    gallery-name: 7
    gallery-date: January 2015
- - image_path: /gallery/albums/alb08.jpg
+ - image_path: /gallery/albums/alb08.JPG
    gallery-folder: /gallery/gallery08/
    gallery-name: 8
    gallery-date: December 2014
- - image_path: /gallery/albums/alb09.jpg
+ - image_path: /gallery/albums/alb09.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 9
    gallery-date: November 2014
- - image_path: /gallery/albums/alb10.jpg
+ - image_path: /gallery/albums/alb10.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 10
    gallery-date: November 2014
- - image_path: /gallery/albums/alb11.jpg
+ - image_path: /gallery/albums/alb11.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 11
    gallery-date: November 2014
- - image_path: /gallery/albums/alb12.jpg
+ - image_path: /gallery/albums/alb12.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 12
    gallery-date: November 2014
- - image_path: /gallery/albums/alb13.jpg
+ - image_path: /gallery/albums/alb13.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 13
    gallery-date: November 2014
- - image_path: /gallery/albums/alb14.jpg
+ - image_path: /gallery/albums/alb14.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 14
    gallery-date: November 2014
- - image_path: /gallery/albums/alb15.jpg
+ - image_path: /gallery/albums/alb15.JPG
    gallery-folder: /gallery/gallery01/
    gallery-name: 15
    gallery-date: July 2015
- - image_path: /gallery/albums/alb16.jpg
+ - image_path: /gallery/albums/alb16.JPG
    gallery-folder: /gallery/gallery02/
    gallery-name: 16
    gallery-date: June 2015
- - image_path: /gallery/albums/alb17.jpg
+ - image_path: /gallery/albums/alb17.JPG
    gallery-folder: /gallery/gallery03/
    gallery-name: 17
    gallery-date: May 2015
- - image_path: /gallery/albums/alb18.jpg
+ - image_path: /gallery/albums/alb18.JPG
    gallery-folder: /gallery/gallery04/
    gallery-name: 18
    gallery-date: April 2015
- - image_path: /gallery/albums/alb19.jpg
+ - image_path: /gallery/albums/alb19.JPG
    gallery-folder: /gallery/gallery05/
    gallery-name: 19
    gallery-date: March 2015
- - image_path: /gallery/albums/alb20.jpg
+ - image_path: /gallery/albums/alb20.JPG
    gallery-folder: /gallery/gallery06/
    gallery-name: 20
    gallery-date: February 2015
- - image_path: /gallery/albums/alb21.jpg
+ - image_path: /gallery/albums/alb21.JPG
    gallery-folder: /gallery/gallery07/
    gallery-name: 21
    gallery-date: January 2015
- - image_path: /gallery/albums/alb22.jpg
+ - image_path: /gallery/albums/alb22.JPG
    gallery-folder: /gallery/gallery08/
    gallery-name: 22
    gallery-date: December 2014
- - image_path: /gallery/albums/alb23.jpg
+ - image_path: /gallery/albums/alb23.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 23
    gallery-date: November 2014
- - image_path: /gallery/albums/alb24.jpg
+ - image_path: /gallery/albums/alb24.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 24
    gallery-date: November 2014
- - image_path: /gallery/albums/alb25.jpg
+ - image_path: /gallery/albums/alb25.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 25
    gallery-date: November 2014
- - image_path: /gallery/albums/alb26.jpg
+ - image_path: /gallery/albums/alb26.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 26
    gallery-date: November 2014
- - image_path: /gallery/albums/alb27.jpg
+ - image_path: /gallery/albums/alb27.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 27
    gallery-date: November 2014
- - image_path: /gallery/albums/alb28.jpg
+ - image_path: /gallery/albums/alb28.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 28
    gallery-date: November 2014
- - image_path: /gallery/albums/alb29.jpg
+ - image_path: /gallery/albums/alb29.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 29
    gallery-date: November 2014
- - image_path: /gallery/albums/alb30.jpg
+ - image_path: /gallery/albums/alb30.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 30
    gallery-date: November 2014
- - image_path: /gallery/albums/alb31.jpg
+ - image_path: /gallery/albums/alb31.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: 31
    gallery-date: November 2014
@@ -152,8 +152,8 @@ images:
                          <figure class="effect-selena">
 					<header class='gallery-icon'>
 		       
-            <a href="{{ site.url }}{{ site.baseurl }}{{ image.image_path }}" class="popup"  title="{{ image.gallery-name }}" data-caption="{{ image.gallery-date }}">
-<img src="{{ site.url }}{{ site.baseurl }}{{ image.image_path }}"></a>
+            <a href="{{ image.image_path }}" class="popup"  title="{{ image.gallery-name }}" data-caption="{{ image.gallery-date }}">
+<img src="{{ image.image_path }}"></a>
 
 					</header>	
 					<figcaption class='gallery-caption'>
