--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ main-title: "SUNIL SARRAF"
 subtitle: "Official Artist Website"
 description: "Paintings & Artworks"
 images:
- - image_path: /img/slider/01.jpg
+ - image_path: /img/slider/01.JPG
    gallery-folder: /img/slider/
- - image_path: /img/slider/02.jpg
+ - image_path: /img/slider/02.JPG
    gallery-folder: /img/slider/
- - image_path: /img/slider/03.jpg
+ - image_path: /img/slider/03.JPG
    gallery-folder: /img/slider/
 ---
 
