--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,6 +5,24 @@ description: ""
 active: gallery
 header-img: "img/gallery-bg.jpg"
 images:
+  - image_path: /gallery/albums/alb32.JPG
+    gallery-folder: /gallery/gallery01/
+    gallery-name: Speaking stones
+    small-detail:
+    detail: |
+      36x48 acrylic on canvas
+ - image_path: /gallery/albums/alb33.JPG
+    gallery-folder: /gallery/gallery01/
+    gallery-name: Speaking stones
+    small-detail:
+    detail: |
+      24x36 acrylic on canvas
+ - image_path: /gallery/albums/alb34.JPG
+    gallery-folder: /gallery/gallery01/
+    gallery-name: Speaking stones
+    small-detail:
+    detail: |
+      24x36 acrylic on canvas
  - image_path: /gallery/albums/alb01.JPG
    gallery-folder: /gallery/gallery01/
    gallery-name: Speaking stones
