--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ main-title: "SUNIL SARRAF"
 subtitle: "Official Artist Website"
 description: "Paintings & Artworks"
 images:
+ - image_path: /img/slider/00.JPG
+   gallery-folder: /img/slider/
  - image_path: /img/slider/01.JPG
    gallery-folder: /img/slider/
  - image_path: /img/slider/02.JPG
