update website content

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,9 +13,16 @@ images:
     36x48 acrylic on canvas
  - image_path: /gallery/albums/alb33.JPG
    gallery-folder: /gallery/gallery01/
-   gallery-name:
-   small-detail:
+   gallery-name: Bond of Togetherness
+   small-detail: |
+    Painting of two little sisters as they share a loving and caring moment with each other
    detail: |
+
+    The bonds of love, care
+    and togetherness,
+    Are the most beautiful and
+    beyond age!
+
     24x36 acrylic on canvas
  - image_path: /gallery/albums/alb34.JPG
    gallery-folder: /gallery/gallery01/
@@ -38,7 +45,7 @@ images:
     36x48 acrylic on canvas
  - image_path: /gallery/albums/alb02.JPG
    gallery-folder: /gallery/gallery02/
-   gallery-name: The homecoming
+   gallery-name: Homecoming
    small-detail: |
     Painting of a cow herd returning home in the evening size.
    detail: |
@@ -74,9 +81,15 @@ images:
    detail:
  - image_path: /gallery/albums/alb06.JPG
    gallery-folder: /gallery/gallery06/
-   gallery-name: 
-   small-detail:
-   detail:
+   gallery-name: Three Wise Men
+   small-detail: |
+    Painting of three old men, taking a pause, as they return from the local 'haat-bazaar'
+   detail: |
+
+   So what's in the bag?
+   Asked one old man to another.
+   He said, It's a bag of memories.
+   Filled with smiles & tears.
  - image_path: /gallery/albums/alb07.JPG
    gallery-folder: /gallery/gallery07/
    gallery-name: The wait
@@ -92,9 +105,19 @@ images:
     36x24 acrylic on canvas
  - image_path: /gallery/albums/alb08.JPG
    gallery-folder: /gallery/gallery08/
-   gallery-name: 
-   small-detail: 
-   detail: 
+   gallery-name: The Road to Home
+   small-detail: |
+    Painting of Son of a migrant worker returning home on foot along with his family during the corona pandemic
+   detail: |
+
+    Walking miles and miles, with fear in the heart
+    And sadness in the eyes,
+    Times are tough
+    The roads are rough
+    Just one hope by the side...
+    That once we reach home
+    We'd find all our dear ones
+    And above all...life!
  - image_path: /gallery/albums/alb09.JPG
    gallery-folder: /gallery/gallery09/
    gallery-name: The King
@@ -115,17 +138,27 @@ images:
    detail: 
  - image_path: /gallery/albums/alb11.JPG
    gallery-folder: /gallery/gallery09/
-   gallery-name: 
-   small-detail: 
-   detail: 
+   gallery-name: Childhood Friends
+   small-detail: |
+    Painting of an everyday playful scene in the countryside
+   detail: |
+
+    Oh what a joy childhood days are,
+    Full of fun and games...
+    enjoying in the company of dear friends!
  - image_path: /gallery/albums/alb12.JPG
    gallery-folder: /gallery/gallery09/
-   gallery-name: 
-   small-detail: 
-   detail: 
+   gallery-name: The Bridge
+   small-detail: |
+    Painting of a bridge situated in the holy city of Omkareshwar
+   detail: |
+
+    Joining two worlds
+    The day and the night
+    The material and the spiritual!
  - image_path: /gallery/albums/alb13.JPG
    gallery-folder: /gallery/gallery09/
-   gallery-name: The sunshine
+   gallery-name: Sunshine
    small-detail: |
     Painting of a young girl as she tries to shield her face from the sun-rays falling on her face.
    detail: |
@@ -138,9 +171,14 @@ images:
     24x36 acrylic on canvas
  - image_path: /gallery/albums/alb14.JPG
    gallery-folder: /gallery/gallery09/
-   gallery-name: 
-   small-detail: 
-   detail: 
+   gallery-name: A Peaceful Morning
+   small-detail: |
+    Painting of a peaceful morning in the holy town of Maheshwar
+   detail: |
+    The countryside has its
+    own charm and grace,
+    Life here sails at its own
+    peaceful pace!
  - image_path: /gallery/albums/alb15.JPG
    gallery-folder: /gallery/gallery01/
    gallery-name: Towards light
@@ -156,27 +194,41 @@ images:
     24x36 acrylic on canvas
  - image_path: /gallery/albums/alb16.JPG
    gallery-folder: /gallery/gallery02/
-   gallery-name: LETTERS
+   gallery-name: Delight
    small-detail: |
-    A painting reminiscing the lost charm of writing and receiving letters.
+    Painting of an old laborer receiving a money order from the postman.
    detail: |
     
-    So what did the 
-    postman bring today?
-    Words dipped in joy
-    from lands far away!
+    Tears well up in eyes
+    Face lights up with delight
+    Isn't getting something when you need it the most
+    The greatest joy of life!
 
     36x24 acrylic on canvas
  - image_path: /gallery/albums/alb17.JPG
    gallery-folder: /gallery/gallery03/
-   gallery-name: 
-   small-detail: 
-   detail: 
+   gallery-name: Serenity
+   small-detail: |
+    Painting of a serene morning in the village of Khilchipur
+   detail: |
+
+    The holy banks,
+    the serene water,
+    the quaint village...
+    Just the place where you
+    discover yourself!
  - image_path: /gallery/albums/alb18.JPG
    gallery-folder: /gallery/gallery04/
-   gallery-name: 
-   small-detail: 
-   detail: 
+   gallery-name: Safe Haven
+   small-detail: |
+    Painting of a love-filled moment between a grandmother and her grandson
+   detail: |
+
+    My eyes keep seeking you
+    For you are my world
+    In your soft, wrinkly arms
+    I feel the most secured
+
  - image_path: /gallery/albums/alb19.JPG
    gallery-folder: /gallery/gallery05/
    gallery-name: The divine grace
@@ -218,12 +270,18 @@ images:
     24x36 acrylic on canvas
  - image_path: /gallery/albums/alb22.JPG
    gallery-folder: /gallery/gallery08/
-   gallery-name: 
-   small-detail: 
-   detail: 
+   gallery-name: Star
+   small-detail: |
+    Painting of a gemstone seller in the historic town of Mahe
+   detail: |
+
+    Stars and planet
+    High up in the space
+    I have seen your shine
+    In someone's face!
  - image_path: /gallery/albums/alb23.JPG
    gallery-folder: /gallery/gallery09/
-   gallery-name: The lessons
+   gallery-name: The lesson
    small-detail: |
     Painting of a boy shepherding his sheep over a mound. The addition of the outline of a book provides a new dimension and meaning to the painting.
    detail: |
@@ -249,7 +307,7 @@ images:
     24x36 acrylic on canvas
  - image_path: /gallery/albums/alb25.JPG
    gallery-folder: /gallery/gallery09/
-   gallery-name: A picture of innocence
+   gallery-name: Picture of Innocence
    small-detail: |
     Painting of 4 kids sitting around a bonfire on a wintery Sunday morning.
    detail: |
@@ -257,7 +315,7 @@ images:
     There they sat in a huddle
     Soaking in the warmth
     A picture of true innocence
-    That melted my heart
+    That melted my heart...
     
     36x24 acrylic on canvas
  - image_path: /gallery/albums/alb26.JPG
@@ -279,7 +337,7 @@ images:
    detail: 
  - image_path: /gallery/albums/alb28.JPG
    gallery-folder: /gallery/gallery09/
-   gallery-name: Reservoir of Faith
+   gallery-name: The Holy Bath
    small-detail: |
     Painting of a pilgrim taking a holy bath in a sacred 'kund' at Mandav.
    detail: |
